Add security to architecture.